# halt

./: Cargo.toml  README.md  TODO.txt  roadmap.md
docs/: algebraic_data_types.md  algebraic_types.md  borrow_checking_and_mutability.txt  brainstorming.txt  contexts.md  data_type.txt  function_type.txt  functional_types.md  generics.md  generics.txt  implicit_arguments.txt  polymorphism.md  sloppy_bnf.txt  total_functions.txt
samples/: ascii.halt  hello.hlt  iterator.hlt  sort.hlt  types.halt  types.hlt
samples/outdated/: ascii.halt
src/: ast.rs  error.rs  main.rs  misc.rs  new_ast.rs  new_parser.rs  parser.rs  type_check.rs  type_checker.rs
src/ast/: type_expr.rs
