[package]
name = "halt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools   = "0.10.5"
regex       = "1.7.1"
thiserror   = "1.0.39"
anyhow      = "1.0.69"
petgraph    = "0.6.3"
lazy_static = "1.4.0"
peg         = "0.8.1"
